workshop03/appv1-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment

metadata:
  name: appv1-deployment
  namespace: myns

spec:
  replicas: 2
  template:
    metadata:
      name: myappv1
      labels:
        name: myapp
        version: v1
    spec:
      containers:
      - name: myappv1-container
        image: twee1990/mynorthwindapp:v0.0.2
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
          limits:
            cpu: "40m"
            memory: "110M"
        ports:
        - name: myapp-port
          containerPort: 3000
      restartPolicy: Always
