workshop03/appv2-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment

metadata:
  name: appv2-deployment
  namespace: myns

spec:
  replicas: 2
  template:
    metadata:
      name: myapp-v2
      labels:
        name: myapp
        version: v2
    spec:
      containers:
      - name: myappv2-container
        image: stackupiss/northwind-app:v2
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
          limits:
            cpu: "40m"
            memory: "110M"
        ports:
        - name: myapp-port
          containerPort: 3000
      restartPolicy: Always
