workshop03/db-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: db-deployment
  namespace: myns

spec:
  replicas: 1
  selector:
    matchLabels:
      name: mysqldb
      version: v1
  template:
    metadata:
      name: mysqldb
      labels:
        name: mysqldb
        version: v1
    spec:
      volumes:
      - name: mysqldb-volume
        persistentVolumeClaim:
          claimName: mysqldb-pvc
      containers:
      - name: mysqldb-container
        image: stackupiss/northwind-db:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - name: mysql-port
          containerPort: 3306
        volumeMounts:
        - name: mysqldb-volume
          mountPath: /var/lib/mysql
      restartPolicy: Always
