workshop03/app-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: myapp-ing
  namespace: myns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: myappv1-svc
          servicePort: 80
      - path: /v2
        backend:
          serviceName: myappv2-svc
          servicePort: 80
      - path: /
        backend:
          serviceName: myappv2-svc
          servicePort: 80
  - host: app1.157.230.194.60.nip.io
    http:
      paths:
      - backend:
          serviceName: myappv1-svc
          servicePort: 80
  - host: app2.157.230.194.60.nip.io
    http:
      paths:
      - backend:
          serviceName: myappv2-svc
          servicePort: 80
